--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,11 @@
 
 [env:esp32-bmw-wonderwheel]
 platform = espressif32
-board = esp32-bmw-wonderwheel
+board = esp32-s3-bmw-wonderwheel
 framework = arduino
 upload_protocol = esptool
-monitor_port = COM4
+monitor_port = COM7
 monitor_speed = 115200
-upload_port = COM4
-    
+upload_port = COM7
+lib_deps = 
+	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.6.1
